@@ -55,9 +55,6 @@
                 <input type="hidden" name="check_keywords" value="yes" />
                 <input type="hidden" name="area" value="default" />
             </form>
-            <p class="searchtip" style="font-size: 90%">
-                {{ _('Enter search terms or a module, class or function name.') }}
-            </p>
           </div>
           {%- endblock %}
         </div>
