@@ -16,9 +16,6 @@
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 90%">
-    {{ _('Enter search terms or a module, class or function name.') }}
-    </p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
 {%- endif %}
